@@ -24,6 +24,7 @@ _Description: Chainload from menu.lst?
 
 Template: grub-pc/install_devices
 Type: multiselect
+Choices-C: ${RAW_CHOICES}
 Choices: ${CHOICES}
 # Intentionally not marked for translations yet; will do after a review period
 Description: GRUB install devices:
@@ -37,9 +38,54 @@ Description: GRUB install devices:
  If you're unsure which drive is designated as boot drive by your BIOS, it is
  often a good idea to install GRUB to all of them.
  .
- Note: It is possible to install GRUB to partition boot records as well.
- However, this forces GRUB to use the blocklist mechanism, which makes it
- less reliable, and therefore is not recommended.
+ Note: It is possible to install GRUB to partition boot records as well, and
+ some appropriate partitions are offered here.  However, this forces GRUB to
+ use the blocklist mechanism, which makes it less reliable, and therefore is
+ not recommended.
+
+Template: grub-pc/install_devices_disks_changed
+Type: multiselect
+Choices-C: ${RAW_CHOICES}
+Choices: ${CHOICES}
+# Intentionally not marked for translations yet; will do after a review period
+Description: GRUB install devices:
+ The GRUB boot loader was previously installed to a disk that is no longer
+ present, or whose normally unique identifier has changed for some reason.
+ It is important to make sure that the installed GRUB stays in sync with
+ other components such as grub.cfg or with newer Linux images it will have
+ to load, and so you should check again to make sure that GRUB is installed
+ to the appropriate boot devices.
+ .
+ If you're unsure which drive is designated as boot drive by your BIOS, it is
+ often a good idea to install GRUB to all of them.
+ .
+ Note: It is possible to install GRUB to partition boot records as well, and
+ some appropriate partitions are offered here.  However, this forces GRUB to
+ use the blocklist mechanism, which makes it less reliable, and therefore is
+ not recommended.
+
+Template: grub-pc/disk_description
+Type: text
+# Disk sizes are in decimal megabytes, to match how disk manufacturers
+# usually describe them.
+_Description: ${DEVICE} (${SIZE} MB, ${MODEL})
+
+Template: grub-pc/partition_description
+Type: text
+# The "-" is used to indicate indentation. Leading spaces may not work.
+Description: - ${DEVICE} (${SIZE} MB, ${PATH})
+
+Template: grub-pc/install_devices_failed
+Type: boolean
+Default: false
+#flag:translate!:3
+_Description: GRUB installation failed.  Continue?
+ GRUB failed to install to the following devices:
+ .
+ ${FAILED_DEVICES}
+ .
+ Do you want to continue anyway?  If you do, your computer may not start up
+ properly.
 
 Template: grub-pc/install_devices_empty
 Type: boolean
