@@ -40,6 +40,37 @@ available_ids()
   echo "$cached_available_ids"
 }
 
+# Returns non-zero and no output if no mapping can be found.
+device_to_id()
+{
+  local id
+  for id in $(available_ids); do
+    if [ "$(readlink -f "$id")" = "$(readlink -f "$1")" ]; then
+      echo "$id"
+      return 0
+    fi
+  done
+  # Fall back to the plain device name if there's no by-id link for it.
+  if [ -e "$1" ]; then
+    echo "$1"
+    return 0
+  fi
+  return 1
+}
+
+devices_to_ids()
+{
+  local device id ids
+  ids=
+  for device; do
+    id="$(device_to_id "$device" || true)"
+    if [ "$id" ]; then
+      ids="${ids:+$ids, }$id"
+    fi
+  done
+  echo "$ids"
+}
+
 all_disks()
 {
   local id
@@ -49,6 +80,18 @@ all_disks()
       *) echo "$id" ;;
     esac
   done
+}
+
+all_partitions()
+{
+  local id ids
+  ids=
+  for id in $(available_ids); do
+    if [ "$id" != "$1" ] && [ "${id%-part*}" = "$1" ]; then
+      ids="${ids:+$ids }$id"
+    fi
+  done
+  echo "$ids"
 }
 
 # In order to determine whether we accidentally ran grub-install without
@@ -80,6 +123,106 @@ scan_grub2()
   esac
 
   return 1
+}
+
+sysfs_size()
+{
+  local num_sectors sector_size size
+  # Try to find out the size without relying on a partitioning tool being
+  # installed. This isn't too hard on Linux 2.6 with sysfs, but we have to
+  # try a couple of variants on detection of the sector size.
+  if [ -e "$1/size" ]; then
+    num_sectors="$(cat "$1/size")"
+    sector_size=512
+    if [ -e "$1/queue/logical_block_size" ]; then
+      sector_size="$(cat "$1/queue/logical_block_size")"
+    elif [ -e "$1/queue/hw_sector_size" ]; then
+      sector_size="$(cat "$1/queue/hw_sector_size")"
+    fi
+    size="$(expr "$num_sectors" \* "$sector_size" / 1000 / 1000)"
+  fi
+  [ "$size" ] || size='???'
+  echo "$size"
+}
+
+# Returns value in $RET, like a debconf command.
+describe_disk()
+{
+  local disk id base size
+  disk="$1"
+  id="$2"
+
+  if which udevadm >/dev/null 2>&1; then
+    size="$(sysfs_size "/sys$(udevadm info -n "$disk" -q path)")"
+  else
+    base="${disk#/dev/}"
+    base="$(printf %s "$base" | sed 's,/,!,g')"
+    size="$(sysfs_size "/sys/block/$base")"
+  fi
+
+  model=
+  if which udevadm >/dev/null 2>&1; then
+    model="$(udevadm info -n "$disk" -q property | sed -n 's/^ID_MODEL=//p')"
+    if [ -z "$model" ]; then
+      model="$(udevadm info -n "$disk" -q property | sed -n 's/^DM_NAME=//p')"
+    fi
+  fi
+  [ "$model" ] || model='???'
+
+  db_subst grub-pc/disk_description DEVICE "$disk"
+  db_subst grub-pc/disk_description SIZE "$size"
+  db_subst grub-pc/disk_description MODEL "$model"
+  db_metaget grub-pc/disk_description description
+}
+
+# Returns value in $RET, like a debconf command.
+describe_partition()
+{
+  local disk part id path diskbase partbase size
+  disk="$1"
+  part="$2"
+  id="$3"
+  path="$4"
+
+  if which udevadm >/dev/null 2>&1; then
+    size="$(sysfs_size "/sys$(udevadm info -n "$part" -q path)")"
+  else
+    diskbase="${disk#/dev/}"
+    diskbase="$(printf %s "$diskbase" | sed 's,/,!,g')"
+    partbase="${part#/dev/}"
+    partbase="$(printf %s "$partbase" | sed 's,/,!,g')"
+    size="$(sysfs_size "/sys/block/$diskbase/$partbase")"
+  fi
+
+  db_subst grub-pc/partition_description DEVICE "$part"
+  db_subst grub-pc/partition_description SIZE "$size"
+  db_subst grub-pc/partition_description PATH "$path"
+  db_metaget grub-pc/partition_description description
+}
+
+usable_partitions()
+{
+  local last_partition path partition partition_id
+
+  last_partition=
+  for path in / /boot /boot/grub; do
+    partition="$(grub-probe -t device "$path" || true)"
+    if [ -z "$partition" ] || [ "$partition" = "$last_partition" ]; then
+      continue
+    fi
+    partition_id="$(device_to_id "$partition" || true)"
+    echo "$path:$partition_id"
+    last_partition="$partition"
+  done | sort -t: -k2
+}
+
+get_mountpoint()
+{
+  local relpath boot_mountpoint
+
+  relpath="$(grub-mkrelpath "$1")"
+  boot_mountpoint="${1#$relpath}"
+  echo "${boot_mountpoint:-/}"
 }
 
 case "$1" in
@@ -199,41 +342,165 @@ case "$1" in
             touch /boot/grub/grub.cfg
           fi
         else
-          while :; do
-            db_subst grub-pc/install_devices CHOICES `grub-mkdevicemap -m - | sed -e "/^(fd[0-9]\+)/d;s,.*\t,,g" | tr '\n' ',' | sed -e 's/,$//g;s/,/, /g'`
-            db_input high grub-pc/install_devices || true
-            db_go
+          question=grub-pc/install_devices
+          device_map="$(grub-mkdevicemap -m - | grep -v '^(fd[0-9]\+)' || true)"
+          devices="$(echo "$device_map" | cut -f2)"
+          if dpkg --compare-versions "$2" lt 1.98+20100701-1 && \
+             test "$(uname -s)" = Linux; then
+            # Migrate to new by-id naming scheme.
             db_get grub-pc/install_devices
+            old_devices="$RET"
+            new_devices=
+            # Common-case optimisation: if the list of devices is
+            # identical to the LHS of grub-mkdevicemap's output, then
+            # there's no point asking again; just install to all disks.
+            # (This handles e.g. "(hd0)" with one disk.)
+            if [ "$(echo "$device_map" | cut -f1 | sort)" = \
+                 "$(echo "$old_devices" | xargs -n1 | sort)" ]; then
+              new_devices="$(devices_to_ids $devices)"
+              db_set grub-pc/install_devices "$new_devices"
+            # Alternatively, we might be installing to a single partition
+            # on a single disk, and we can deal with that too if there's
+            # only one available disk and it has an appropriate partition.
+            # This doesn't necessarily work for multiple disks because now
+            # the order matters.
+            elif [ "$(echo "$device_map" | wc -l)" = 1 ] && \
+                 [ "$(echo "$old_devices" | wc -w)" = 1 ] && \
+                 echo "$old_devices" | grep -q ,; then
+              old_device="${old_devices#(}"
+              old_device="${old_device%)}"
+              old_disk="${old_device%,*}"
+              old_partition="${old_device##*,}"
+              new_device="$(echo "$device_map" | grep "^($old_disk)" | \
+                            cut -f2)"
+              new_device="$(device_to_id $new_device)"
+              if [ "$new_device" ]; then
+                new_device="$new_device-part$old_partition"
+                # Run through device_to_id again to check for existence.
+                new_device="$(device_to_id $new_device)"
+              fi
+              if [ "$new_device" ]; then
+                new_devices="$new_device"
+                db_set grub-pc/install_devices "$new_device"
+              fi
+            fi
+            if [ -z "$new_devices" ]; then
+              new_devices="$(devices_to_ids $old_devices)"
+              db_set grub-pc/install_devices "$new_devices"
+              # Common-case optimisation: if all devices are translatable
+              # to by-id and the number of devices there is the same as
+              # the number of devices GRUB can see, then there's no point
+              # asking again.  (This handles e.g. "/dev/sda" with one
+              # disk.)
+              old_devices_count="$(echo "$old_devices" | wc -w)"
+              new_devices_count="$(echo "$new_devices" | wc -w)"
+              devices_count="$(echo "$devices" | wc -w)"
+              if [ "$old_devices_count" != "$new_devices_count" ] || \
+                 [ "$new_devices_count" != "$devices_count" ]; then
+                db_fset grub-pc/install_devices seen false
+                db_fset grub-pc/install_devices_empty seen false
+              fi
+            fi
+          else
+            db_get grub-pc/install_devices
+            valid=1
+            for device in $RET; do
+              if [ ! -e "$device" ]; then
+                valid=0
+                break
+              fi
+            done
+            if [ "$valid" = 0 ]; then
+              question=grub-pc/install_devices_disks_changed
+              db_set "$question" "$RET"
+              db_fset "$question" seen false
+              db_fset grub-pc/install_devices_empty seen false
+            fi
+          fi
+
+          while :; do
+            ids=
+            descriptions=
+            partitions="$(usable_partitions)"
+            for device in $devices; do
+              disk_id="$(device_to_id "$device" || true)"
+              if [ "$disk_id" ]; then
+                ids="${ids:+$ids, }$disk_id"
+                describe_disk "$device" "$disk_id"
+                RET="$(printf %s "$RET" | sed 's/,/\\,/g')"
+                descriptions="${descriptions:+$descriptions, }$RET"
+                for partition_pair in $partitions; do
+                  partition_id="${partition_pair#*:}"
+                  if [ "${partition_id#$disk_id-part}" != "$partition_id" ]; then
+                    ids="${ids:+$ids, }$partition_id"
+                    describe_partition "$device" "$(readlink -f "$partition_id")" "$partition_id" "$(get_mountpoint "${partition_pair%%:*}")"
+                    RET="$(printf %s "$RET" | sed 's/,/\\,/g')"
+                    descriptions="${descriptions:+$descriptions, }$RET"
+                  fi
+                done
+              fi
+            done
+            db_subst "$question" RAW_CHOICES "$ids"
+            db_subst "$question" CHOICES "$descriptions"
+            db_input high "$question" || true
+            db_go
+            db_get "$question"
+            failed_devices=
             for i in `echo $RET | sed -e 's/,/ /g'` ; do
-              if grub-install --force --no-floppy $i ; then
+              real_device="$(readlink -f "$i")"
+              if grub-install --force --no-floppy $real_device ; then
                 # We just installed GRUB 2; then also generate grub.cfg.
                 touch /boot/grub/grub.cfg
+              else
+                failed_devices="$failed_devices $real_device"
               fi
             done
 
-            db_get grub-pc/install_devices
-            if [ "$RET" ]; then
-              break
+            if [ "$question" != grub-pc/install_devices ]; then
+              db_set grub-pc/install_devices "$RET"
+              db_fset grub-pc/install_devices seen true
             fi
 
-            # Reset the seen flag if the current answer is false, since
-            # otherwise we'll loop with no indication of why.
-            db_get grub-pc/install_devices_empty
-            if [ "$RET" = false ]; then
-              db_fset grub-pc/install_devices_empty seen false
-            fi
-            if db_input critical grub-pc/install_devices_empty; then
-              db_go
-              db_get grub-pc/install_devices_empty
-              if [ "$RET" = true ]; then
-                break
+            if [ "$failed_devices" ]; then
+              db_subst grub-pc/install_devices_failed FAILED_DEVICES "$failed_devices"
+              db_fset grub-pc/install_devices_failed seen false
+              if db_input critical grub-pc/install_devices_failed; then
+                db_go
+                db_get grub-pc/install_devices_failed
+                if [ "$RET" = true ]; then
+                  break
+                else
+                  db_fset "$question" seen false
+                  db_fset grub-pc/install_devices_failed seen false
+                  continue
+                fi
               else
-                db_fset grub-pc/install_devices seen false
+                break # noninteractive
+              fi
+            fi
+
+            db_get grub-pc/install_devices
+            if [ -z "$RET" ]; then
+              # Reset the seen flag if the current answer is false, since
+              # otherwise we'll loop with no indication of why.
+              db_get grub-pc/install_devices_empty
+              if [ "$RET" = false ]; then
                 db_fset grub-pc/install_devices_empty seen false
-                # Go back round the loop.
+              fi
+              if db_input critical grub-pc/install_devices_empty; then
+                db_go
+                db_get grub-pc/install_devices_empty
+                if [ "$RET" = true ]; then
+                  break
+                else
+                  db_fset "$question" seen false
+                  db_fset grub-pc/install_devices_empty seen false
+                fi
+              else
+                break # noninteractive
               fi
             else
-              break # noninteractive
+              break
             fi
           done
         fi
